--- a/index.html
+++ b/index.html
@@ -376,10 +376,10 @@
                 tag: "入門比特幣",
                 title: "貨幣越來越「沒用」",
                 content: (
-                    <div className="w-full max-w-4xl mx-auto">
-                        <p className="text-slate-500 text-center text-sm md:text-base mb-8 md:mb-10">隨階段演進 · 不再需要</p>
+                    <div className="w-full max-w-5xl mx-auto">
+                        <p className="text-slate-500 text-center text-base md:text-lg mb-6 md:mb-8">隨階段演進 · 不再需要</p>
                         <div className="relative">
-                            <div className="hidden md:block absolute left-[12%] right-[12%] top-[38%] h-0.5 bg-gradient-to-r from-slate-300 via-slate-200 to-amber-400 rounded-full z-0" />
+                            <div className="hidden md:block absolute left-[10%] right-[10%] top-[32%] h-0.5 bg-gradient-to-r from-slate-300 via-slate-200 to-amber-400 rounded-full z-0" />
                             <div className="flex flex-col md:flex-row items-stretch justify-between gap-8 md:gap-0 w-full relative z-10">
                                 {[
                                     { src: "https://i.urusai.cc/BBmeU.png", label: "要能吃" },
@@ -389,11 +389,11 @@
                                 ].map((item, i) => (
                                     <div key={i} className="flex flex-col md:flex-row items-center gap-4 md:gap-2 flex-1">
                                         <div className="flex flex-col items-center w-full">
-                                            <div className="w-full aspect-square max-w-[80px] md:max-w-[90px] rounded-xl border border-slate-200 bg-slate-50/50 p-1.5 overflow-hidden">
-                                                <img src={item.src} alt={item.label} className="w-full h-full object-contain opacity-30" />
+                                            <div className="w-full aspect-square max-w-[100px] md:max-w-[130px] rounded-xl border border-slate-200 bg-slate-50/50 p-1.5 overflow-hidden">
+                                                <img src={item.src} alt={item.label} className="w-full h-full object-contain opacity-40" />
                                             </div>
                                             <div className="mt-3 text-center">
-                                                <span className="inline-block font-bold text-slate-900 text-lg md:text-2xl bg-amber-100 text-amber-900 px-4 py-2 rounded-xl shadow-sm">{item.label}</span>
+                                                <span className="inline-block font-bold text-slate-900 text-xl md:text-2xl bg-amber-100 text-amber-900 px-5 py-2.5 rounded-xl shadow-sm">{item.label}</span>
                                             </div>
                                         </div>
                                         {i < 3 && (
@@ -405,10 +405,10 @@
                                 ))}
                             </div>
                         </div>
-                        <div className="mt-10 flex items-center justify-center gap-3 text-slate-500">
-                            <span className="text-sm font-medium">實體</span>
-                            <div className="w-32 h-1.5 rounded-full bg-gradient-to-r from-slate-400 via-slate-300 to-amber-500" />
-                            <span className="text-sm font-medium">數位 · 只剩交易便利</span>
+                        <div className="mt-8 flex items-center justify-center gap-3 text-slate-500">
+                            <span className="text-base font-medium">實體</span>
+                            <div className="w-36 h-1.5 rounded-full bg-gradient-to-r from-slate-400 via-slate-300 to-amber-500" />
+                            <span className="text-base font-medium">數位 · 只剩交易便利</span>
                         </div>
                     </div>
                 )
@@ -471,6 +471,40 @@
             },
             {
                 id: 12,
+                layout: 'detail',
+                tag: "入門比特幣",
+                title: "中間人的問題",
+                content: (
+                    <div className="flex flex-col items-center justify-center h-full py-6">
+                        <p className="text-slate-500 text-center text-base md:text-lg mb-8">數位交易仰賴中間人，帶來三大問題</p>
+                        <div className="grid grid-cols-1 md:grid-cols-3 gap-6 md:gap-8 w-full max-w-4xl">
+                            <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-amber-200 hover:shadow-md transition-all flex flex-col items-center text-center">
+                                <div className="w-14 h-14 md:w-16 md:h-16 rounded-full bg-red-50 flex items-center justify-center mb-4">
+                                    <svg className="w-7 h-7 md:w-8 md:h-8 text-red-500" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/><path d="m9 12 2 2 4-4"/></svg>
+                                </div>
+                                <h3 className="text-xl md:text-2xl font-bold text-slate-800 mb-2">洩漏隱私</h3>
+                                <p className="text-slate-600 text-base">交易與身份資訊經由中間人，隱私暴露風險高</p>
+                            </div>
+                            <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-amber-200 hover:shadow-md transition-all flex flex-col items-center text-center">
+                                <div className="w-14 h-14 md:w-16 md:h-16 rounded-full bg-amber-50 flex items-center justify-center mb-4">
+                                    <svg className="w-7 h-7 md:w-8 md:h-8 text-amber-600" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><rect width="18" height="18" x="3" y="3" rx="2"/><path d="M3 9h18"/><path d="M9 21V9"/></svg>
+                                </div>
+                                <h3 className="text-xl md:text-2xl font-bold text-slate-800 mb-2">進入門檻</h3>
+                                <p className="text-slate-600 text-base">開戶、審核、地域限制，阻礙自由參與</p>
+                            </div>
+                            <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-amber-200 hover:shadow-md transition-all flex flex-col items-center text-center">
+                                <div className="w-14 h-14 md:w-16 md:h-16 rounded-full bg-blue-50 flex items-center justify-center mb-4">
+                                    <svg className="w-7 h-7 md:w-8 md:h-8 text-blue-600" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M12 2v20M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/></svg>
+                                </div>
+                                <h3 className="text-xl md:text-2xl font-bold text-slate-800 mb-2">交易彈性</h3>
+                                <p className="text-slate-600 text-base">時間、額度、幣別受中間人規則限制</p>
+                            </div>
+                        </div>
+                    </div>
+                )
+            },
+            {
+                id: 13,
                 layout: 'split',
                 title: "價值載體的演進與中間人",
                 leftContent: (
@@ -502,7 +536,7 @@
                 )
             },
             {
-                id: 13,
+                id: 14,
                 layout: 'split',
                 title: "區塊鏈 vs 銀行：數位面交與優缺點",
                 leftContent: (
@@ -537,7 +571,7 @@
                 )
             },
             {
-                id: 14,
+                id: 15,
                 layout: 'detail',
                 tag: "幣圈的銅臭味",
                 title: "穩定幣與改寫金融規則",
@@ -569,7 +603,7 @@
                 )
             },
             {
-                id: 15,
+                id: 16,
                 layout: 'detail',
                 tag: "資產代幣化",
                 title: "黃金、股票與 DeFi",
@@ -594,7 +628,7 @@
                 )
             },
             {
-                id: 16,
+                id: 17,
                 layout: 'detail',
                 tag: "常用工具",
                 title: "Visa 卡、錢包與跨境投資",
@@ -621,7 +655,7 @@
                 )
             },
             {
-                id: 17,
+                id: 18,
                 layout: 'split',
                 title: "總結與延伸閱讀",
                 leftContent: (
@@ -656,7 +690,7 @@
                 )
             },
             {
-                id: 18,
+                id: 19,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
