--- a/index.html
+++ b/index.html
@@ -332,7 +332,6 @@
                 title: "價值載體數位化",
                 leftContent: (
                     <div className="w-full max-w-5xl mx-auto">
-                        <p className="text-slate-500 text-center text-lg md:text-xl mb-4 md:mb-6">從實物到數位 · 隨歷史演進</p>
                         <div className="relative">
                             <div className="hidden md:block absolute left-[10%] right-[10%] top-[24%] h-0.5 bg-gradient-to-r from-slate-300 via-slate-200 to-amber-400 rounded-full z-0" />
                             <div className="flex flex-col md:flex-row items-center justify-between gap-6 md:gap-0 w-full relative z-10">
@@ -377,7 +376,6 @@
                 title: "貨幣越來越「沒用」",
                 content: (
                     <div className="w-full max-w-5xl mx-auto">
-                        <p className="text-slate-500 text-center text-base md:text-lg mb-6 md:mb-8">隨階段演進 · 不再需要</p>
                         <div className="relative">
                             <div className="hidden md:block absolute left-[10%] right-[10%] top-[32%] h-0.5 bg-gradient-to-r from-slate-300 via-slate-200 to-amber-400 rounded-full z-0" />
                             <div className="flex flex-col md:flex-row items-stretch justify-between gap-8 md:gap-0 w-full relative z-10">
@@ -408,7 +406,7 @@
                         <div className="mt-8 flex items-center justify-center gap-3 text-slate-500">
                             <span className="text-base font-medium">實體</span>
                             <div className="w-36 h-1.5 rounded-full bg-gradient-to-r from-slate-400 via-slate-300 to-amber-500" />
-                            <span className="text-base font-medium">數位 · 只剩交易便利</span>
+                            <span className="text-base font-medium">數位 · 交易便利最重要</span>
                         </div>
                     </div>
                 )
