--- a/index.html
+++ b/index.html
@@ -418,52 +418,34 @@
                 title: "數位交易仰賴中間人",
                 content: (
                     <div className="flex flex-col items-center justify-center h-full py-4">
-                        <p className="text-slate-500 text-center text-sm md:text-base mb-6">加密貨幣問世之前的數位交易，共通特性是</p>
-                        <div className="relative w-full max-w-3xl flex flex-row items-center justify-between gap-2 md:gap-4">
+                        <div className="relative w-full max-w-4xl flex flex-col md:flex-row items-center justify-between gap-6 md:gap-4">
                             {/* 左：賣家 */}
                             <div className="flex flex-col items-center w-full md:w-[28%] flex-1">
-                                <div className="p-5 md:p-6 bg-white rounded-2xl border-2 border-slate-200 shadow-sm flex flex-col items-center">
-                                    <div className="w-16 h-16 md:w-20 md:h-20 rounded-full bg-slate-100 flex items-center justify-center mb-2">
-                                        <span className="text-3xl md:text-4xl">👔</span>
-                                    </div>
-                                    <div className="flex gap-1 mb-2">
-                                        <span className="text-amber-500 font-bold text-lg">$</span>
-                                        <span className="text-amber-500 font-bold text-lg">$</span>
-                                        <span className="text-amber-500 font-bold text-lg">$</span>
-                                    </div>
-                                    <span className="bg-green-500 text-white text-sm font-bold px-3 py-1 rounded-lg">SALE</span>
+                                <div className="w-full max-w-[180px] aspect-square rounded-2xl border-2 border-slate-200 bg-white shadow-sm overflow-hidden flex items-center justify-center p-2">
+                                    <img src="https://i.urusai.cc/pGkxV.png" alt="賣家" className="w-full h-full object-contain" />
                                 </div>
                                 <p className="font-bold text-slate-800 mt-3 text-lg">賣家</p>
                             </div>
+                            <span className="text-2xl text-slate-300 font-bold hidden md:inline">→</span>
+                            <span className="text-2xl text-slate-300 font-bold md:hidden">↓</span>
                             {/* 中：銀行（中間人） */}
-                            <div className="flex flex-col items-center w-full md:w-[36%] flex-shrink-0 relative z-10">
-                                <div className="p-5 md:p-6 bg-white rounded-2xl border-2 border-slate-300 shadow-md flex flex-col items-center min-w-[140px]">
-                                    <svg className="w-16 h-16 md:w-20 md:h-20 text-slate-600 mb-1" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="1.5" strokeLinecap="round" strokeLinejoin="round">
-                                        <path d="M3 21h18"/><path d="M3 10h18"/><path d="M5 6l7-3 7 3"/>
-                                        <path d="M4 10v11"/><path d="M20 10v11"/><path d="M8 14v3"/><path d="M12 14v3"/><path d="M16 14v3"/>
-                                    </svg>
-                                    <span className="bg-blue-600 text-white text-xs font-bold px-2 py-0.5 rounded">BANK</span>
+                            <div className="flex flex-col items-center w-full md:w-[36%] flex-shrink-0">
+                                <div className="w-full max-w-[200px] aspect-square rounded-2xl border-2 border-slate-300 bg-white shadow-md overflow-hidden flex items-center justify-center p-2">
+                                    <img src="https://i.urusai.cc/z7gGr.png" alt="銀行（中間人）" className="w-full h-full object-contain" />
                                 </div>
                                 <p className="font-bold text-slate-800 mt-3 text-lg">銀行（中間人）</p>
-                                {/* 桌面版：兩條斜線從銀行連到左右 */}
-                                <svg className="hidden md:block absolute top-[45%] left-0 right-0 w-full h-24 pointer-events-none" style={{ transform: 'translateY(-50%)' }}>
-                                    <line x1="50%" y1="48" x2="0" y2="90" stroke="#94a3b8" strokeWidth="2" strokeDasharray="4 2"/>
-                                    <line x1="50%" y1="48" x2="100%" y2="90" stroke="#94a3b8" strokeWidth="2" strokeDasharray="4 2"/>
-                                </svg>
                             </div>
+                            <span className="text-2xl text-slate-300 font-bold hidden md:inline">→</span>
+                            <span className="text-2xl text-slate-300 font-bold md:hidden">↓</span>
                             {/* 右：買家 */}
                             <div className="flex flex-col items-center w-full md:w-[28%] flex-1">
-                                <div className="p-5 md:p-6 bg-white rounded-2xl border-2 border-slate-200 shadow-sm flex flex-col items-center">
-                                    <div className="relative">
-                                        <IconMobilePay />
-                                        <span className="absolute -top-1 -right-1 w-8 h-8 bg-amber-400 rounded-full flex items-center justify-center text-slate-800 text-lg">🛒</span>
-                                    </div>
-                                    <span className="text-slate-500 text-xs mt-1">數位交易</span>
+                                <div className="w-full max-w-[180px] aspect-square rounded-2xl border-2 border-slate-200 bg-white shadow-sm overflow-hidden flex items-center justify-center p-2">
+                                    <img src="https://i.urusai.cc/VPGPL.png" alt="買家" className="w-full h-full object-contain" />
                                 </div>
                                 <p className="font-bold text-slate-800 mt-3 text-lg">買家</p>
                             </div>
                         </div>
-                        <p className="text-slate-400 text-sm mt-6 text-center">賣家與買家皆透過銀行完成數位交易</p>
+                        <p className="text-slate-600 text-base md:text-lg font-medium mt-8 text-center max-w-xl">買賣雙方目前高度仰賴銀行作為中間人完成交易</p>
                     </div>
                 )
             },
