--- a/index.html
+++ b/index.html
@@ -419,12 +419,12 @@
                 content: (
                     <div className="flex flex-col items-center justify-center h-full py-4">
                         <div className="relative w-full max-w-4xl flex flex-col md:flex-row items-center justify-between gap-6 md:gap-4">
-                            {/* 左：賣家 */}
+                            {/* 左：買家 */}
                             <div className="flex flex-col items-center w-full md:w-[28%] flex-1">
                                 <div className="w-full max-w-[180px] aspect-square rounded-2xl border-2 border-slate-200 bg-white shadow-sm overflow-hidden flex items-center justify-center p-2">
-                                    <img src="https://i.urusai.cc/pGkxV.png" alt="賣家" className="w-full h-full object-contain" />
+                                    <img src="https://i.urusai.cc/z7gGr.png" alt="買家" className="w-full h-full object-contain" />
                                 </div>
-                                <p className="font-bold text-slate-800 mt-3 text-lg">賣家</p>
+                                <p className="font-bold text-slate-800 mt-3 text-lg">買家</p>
                             </div>
                             <span className="text-2xl text-slate-300 font-bold hidden md:inline">→</span>
                             <span className="text-2xl text-slate-300 font-bold md:hidden">↓</span>
@@ -437,15 +437,15 @@
                             </div>
                             <span className="text-2xl text-slate-300 font-bold hidden md:inline">→</span>
                             <span className="text-2xl text-slate-300 font-bold md:hidden">↓</span>
-                            {/* 右：買家 */}
+                            {/* 右：賣家 */}
                             <div className="flex flex-col items-center w-full md:w-[28%] flex-1">
                                 <div className="w-full max-w-[180px] aspect-square rounded-2xl border-2 border-slate-200 bg-white shadow-sm overflow-hidden flex items-center justify-center p-2">
-                                    <img src="https://i.urusai.cc/z7gGr.png" alt="買家" className="w-full h-full object-contain" />
+                                    <img src="https://i.urusai.cc/pGkxV.png" alt="賣家" className="w-full h-full object-contain" />
                                 </div>
-                                <p className="font-bold text-slate-800 mt-3 text-lg">買家</p>
+                                <p className="font-bold text-slate-800 mt-3 text-lg">賣家</p>
                             </div>
                         </div>
-                        <p className="text-slate-600 text-base md:text-lg font-medium mt-8 text-center max-w-xl">買賣雙方目前高度仰賴銀行作為中間人完成交易</p>
+                        <p className="text-slate-600 text-base md:text-lg font-medium mt-8 text-center max-w-xl">買家將款項存入銀行，經由銀行轉給賣家，完成交易</p>
                     </div>
                 )
             },
@@ -485,32 +485,19 @@
             {
                 id: 13,
                 layout: 'split',
-                title: "價值載體的演進與中間人",
+                title: "如不靠中間人的資產轉移",
                 leftContent: (
-                    <div className="space-y-5">
-                        <div className="bg-white p-6 rounded-2xl shadow-sm border border-slate-100">
-                            <h3 className="text-xl font-bold text-slate-800 mb-2">價值載體的演進</h3>
-                            <p className="text-lg text-slate-600">人類一直在讓價值載體更易攜帶、易交易。貨幣越來越「沒用」— 不一定要能吃、能用、摸得著，最終只剩「交易便利」。</p>
-                        </div>
-                        <div className="bg-white p-6 rounded-2xl shadow-sm border border-slate-100">
-                            <h3 className="text-xl font-bold text-slate-800 mb-2">中間人的問題</h3>
-                            <ul className="list-disc list-inside text-lg text-slate-600 space-y-1">
-                                <li>洩漏隱私</li>
-                                <li>進入門檻</li>
-                                <li>交易彈性受限</li>
-                            </ul>
+                    <div className="flex flex-col items-center justify-center h-full">
+                        <p className="text-lg text-slate-600 text-center mb-4">2008 年，一套不經中間人的點對點電子現金系統問世 —— 比特幣。</p>
+                        <div className="w-full max-w-2xl rounded-xl overflow-hidden border border-slate-200 shadow-md bg-white">
+                            <img src="https://i.urusai.cc/RQyub.png" alt="比特幣白皮書截圖" className="w-full h-auto object-contain" />
                         </div>
                     </div>
                 ),
                 rightContent: (
-                    <div className="flex flex-col items-center justify-center h-full space-y-6">
-                        <div className="p-6 bg-slate-100 rounded-2xl border border-slate-200 text-center">
-                            <p className="text-2xl font-bold text-slate-800 mb-2">Peer-to-Peer Electronic Cash System</p>
-                            <p className="text-lg text-slate-600">比特幣白皮書</p>
-                        </div>
-                        <p className="text-lg text-slate-500 text-center max-w-sm">
-                            不靠中間人的資產轉移：Bitcoin 是點對點現金系統，不是投機標的。
-                        </p>
+                    <div className="flex flex-col items-center justify-center h-full">
+                        <img src="https://i.urusai.cc/qqkIa.png" alt="比特幣" className="w-32 h-32 md:w-40 md:h-40 object-contain" />
+                        <p className="text-xl font-bold text-slate-800 mt-4">Bitcoin</p>
                     </div>
                 )
             },
