--- a/index.html
+++ b/index.html
@@ -509,6 +509,35 @@
             },
             {
                 id: 15,
+                layout: 'detail',
+                tag: "發錢實作",
+                title: "下載錢包",
+                content: (
+                    <div className="flex flex-col md:flex-row items-center justify-center gap-8 md:gap-12 py-4">
+                        <p className="text-lg md:text-xl text-slate-600 text-center md:text-left order-first md:order-none w-full md:w-auto md:max-w-md">
+                            沒有錢包就收不到加密貨幣，先下載錢包才能繼續發錢。
+                        </p>
+                        <div className="flex flex-col sm:flex-row items-center gap-6 md:gap-8">
+                            <div className="flex-shrink-0 bg-white rounded-2xl p-4 border-2 border-slate-200 shadow-sm">
+                                <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://trustwallet.com/download" alt="下載錢包 QR Code" className="w-[200px] h-[200px] rounded-lg" />
+                                <p className="text-center text-sm font-medium text-slate-500 mt-2">掃描下載</p>
+                            </div>
+                            <div className="flex flex-col gap-4">
+                                <a href="https://apps.apple.com/app/trust-wallet/id1288339409" target="_blank" rel="noopener noreferrer" className="inline-flex items-center justify-center gap-3 bg-black text-white px-6 py-4 rounded-2xl font-bold text-lg hover:bg-slate-800 transition-colors shadow-lg hover:shadow-xl min-w-[220px]">
+                                    <svg className="w-8 h-8" viewBox="0 0 24 24" fill="currentColor"><path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/></svg>
+                                    App Store 下載
+                                </a>
+                                <a href="https://play.google.com/store/apps/details?id=com.wallet.crypto.trustapp" target="_blank" rel="noopener noreferrer" className="inline-flex items-center justify-center gap-3 bg-slate-800 text-white px-6 py-4 rounded-2xl font-bold text-lg hover:bg-slate-700 transition-colors shadow-lg hover:shadow-xl min-w-[220px]">
+                                    <svg className="w-8 h-8" viewBox="0 0 24 24"><path fill="currentColor" d="M3.609 1.814L13.792 12 3.61 22.186a.996.996 0 0 1-.61-.92V2.734a1 1 0 0 1 .609-.92zm10.89 10.893l2.302 2.302-10.89 6.787 8.588-9.089zm3.199-3.198l2.807 1.526a.998.998 0 0 1 0 1.73l-2.808 1.526L15.206 12l2.492-2.491zM5.864 2.658L16.8 8.99l-2.302 2.302-8.634-8.634z"/></svg>
+                                    Google Play 下載
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                )
+            },
+            {
+                id: 16,
                 layout: 'split',
                 title: "區塊鏈 vs 銀行：數位面交與優缺點",
                 leftContent: (
@@ -543,7 +572,7 @@
                 )
             },
             {
-                id: 16,
+                id: 17,
                 layout: 'detail',
                 tag: "幣圈的銅臭味",
                 title: "穩定幣與改寫金融規則",
@@ -575,7 +604,7 @@
                 )
             },
             {
-                id: 17,
+                id: 18,
                 layout: 'detail',
                 tag: "資產代幣化",
                 title: "黃金、股票與 DeFi",
@@ -600,7 +629,7 @@
                 )
             },
             {
-                id: 18,
+                id: 19,
                 layout: 'detail',
                 tag: "常用工具",
                 title: "Visa 卡、錢包與跨境投資",
@@ -627,7 +656,7 @@
                 )
             },
             {
-                id: 19,
+                id: 20,
                 layout: 'split',
                 title: "總結與延伸閱讀",
                 leftContent: (
@@ -662,7 +691,7 @@
                 )
             },
             {
-                id: 20,
+                id: 21,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
