--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                                 ].map((item, i) => (
                                     <div key={i} className="flex flex-col md:flex-row items-center gap-3 md:gap-2 flex-1">
                                         <div className="flex flex-col items-center w-full group">
-                                            <div className="w-full aspect-square max-w-[140px] md:max-w-[180px] rounded-2xl border-2 border-slate-200 bg-white p-2 shadow-md overflow-hidden transition-all duration-300 group-hover:border-amber-400 group-hover:shadow-lg">
+                                            <div className="w-full aspect-square max-w-[100px] md:max-w-[130px] rounded-2xl border-2 border-slate-200 bg-white p-2 shadow-md overflow-hidden transition-all duration-300 group-hover:border-amber-400 group-hover:shadow-lg">
                                                 <img src={item.src} alt={item.label} className="w-full h-full object-contain" />
                                             </div>
                                             <div className="mt-3 text-center">
@@ -421,7 +421,7 @@
                         <div className="relative w-full max-w-4xl flex flex-col md:flex-row items-center justify-between gap-6 md:gap-4">
                             {/* 左：買家 */}
                             <div className="flex flex-col items-center w-full md:w-[28%] flex-1">
-                                <div className="w-full max-w-[180px] aspect-square rounded-2xl border-2 border-slate-200 bg-white shadow-sm overflow-hidden flex items-center justify-center p-2">
+                                <div className="w-full max-w-[100px] md:max-w-[130px] aspect-square rounded-2xl border-2 border-slate-200 bg-white shadow-sm overflow-hidden flex items-center justify-center p-2">
                                     <img src="https://i.urusai.cc/z7gGr.png" alt="買家" className="w-full h-full object-contain" />
                                 </div>
                                 <p className="font-bold text-slate-800 mt-3 text-lg">買家</p>
@@ -430,7 +430,7 @@
                             <span className="text-2xl text-slate-300 font-bold md:hidden">↓</span>
                             {/* 中：銀行（中間人） */}
                             <div className="flex flex-col items-center w-full md:w-[36%] flex-shrink-0">
-                                <div className="w-full max-w-[200px] aspect-square rounded-2xl border-2 border-slate-300 bg-white shadow-md overflow-hidden flex items-center justify-center p-2">
+                                <div className="w-full max-w-[100px] md:max-w-[130px] aspect-square rounded-2xl border-2 border-slate-300 bg-white shadow-md overflow-hidden flex items-center justify-center p-2">
                                     <img src="https://i.urusai.cc/VPGPL.png" alt="銀行（中間人）" className="w-full h-full object-contain" />
                                 </div>
                                 <p className="font-bold text-slate-800 mt-3 text-lg">銀行（中間人）</p>
@@ -439,7 +439,7 @@
                             <span className="text-2xl text-slate-300 font-bold md:hidden">↓</span>
                             {/* 右：賣家 */}
                             <div className="flex flex-col items-center w-full md:w-[28%] flex-1">
-                                <div className="w-full max-w-[180px] aspect-square rounded-2xl border-2 border-slate-200 bg-white shadow-sm overflow-hidden flex items-center justify-center p-2">
+                                <div className="w-full max-w-[100px] md:max-w-[130px] aspect-square rounded-2xl border-2 border-slate-200 bg-white shadow-sm overflow-hidden flex items-center justify-center p-2">
                                     <img src="https://i.urusai.cc/pGkxV.png" alt="賣家" className="w-full h-full object-contain" />
                                 </div>
                                 <p className="font-bold text-slate-800 mt-3 text-lg">賣家</p>
